Map, Set, universal create && destroy
11/24/2012
----------
+ Add linkedlist.
+ Optimize arraylist_list_iterator.
+ Add universal create and destroy mechanism
+ Add definition of map, set

--- a/HISTORY
+++ b/HISTORY
@@ -11,6 +11,8 @@ TODO List
 ----------
 + Add linkedlist.
 + Optimize arraylist_list_iterator.
++ Add universal create and destroy mechanism
++ Add definition of map, set
 
 11/19/2012
 ----------
